--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,12 +27,20 @@
             <li>
               <%= link_to "All Gadgets", gadgets_path %>
             </li>
+          </ul>
+
+          <!-- The drop down menu -->
+          <ul class="nav navbar-nav pull-right">
             <% unless user_signed_in? %>
               <li>
                 <%= link_to "Sign up", new_user_registration_path %>
               </li>
               <li>
                 <%= link_to "sign in", new_user_session_path %>
+              </li>
+            <% else %>
+              <li>
+                <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
               </li>
             <% end %>
           </ul>
@@ -41,11 +49,6 @@
     </div>
 
     <div class="container" style="padding-top: 60px;">
-      <% if user_signed_in? %>
-        Signed in as <%= current_user.email %>
-        <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-      <% end %>
-
       <%= yield %>
     </div>
 </body>
