--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -1,30 +1,33 @@
-<h1>Listing Gadgets</h1>
+<h1>Manage my gadgets <%= link_to "+ Add new gadget", new_gadget_path, class: "btn btn-primary pull-right" %></h1>
+<hr/>
+
+<p id="notice"><%= notice %></p>
 
 <% if @all_gadgets.present? %>
-  <table>
+  <table class="table table-striped table-bordered">
     <tr>
       <th>Name</th>
+      <th>Manufacturer</th>
       <th>Quantity</th>
       <th>Date purchased</th>
-      <th></th>
-      <th></th>
+      <th>Actions</th>
     </tr>
 
     <% @all_gadgets.each do |gadget| %>
       <tr>
         <td><%= gadget.name %></td>
+        <td><%= gadget.manufacturer.present? ? gadget.manufacturer : "(not provided)" %></td>
         <td><%= gadget.quantity %></td>
-        <td><%= gadget.date_purchased %></td>
-        <td><%= link_to "Show", gadget %></td>
-        <td><%= link_to "Edit", edit_gadget_path(gadget) %></td>
-        <td><%= link_to "Remove", gadget, method: :delete, data: { confirm: "Are you sure?" } %></td>
+        <td><%= gadget.date_purchased.to_time.strftime('%B %e, %Y') %></td>
+        <td>
+          <%= link_to "Show", gadget %> |
+          <%= link_to "Edit", edit_gadget_path(gadget) %> |
+          <%= link_to "Remove", gadget, method: :delete, data: { confirm: "Are you sure?" } %>
+        </td>
       </tr>
     <% end %>
   </table>
 <% else %>
-  No gadgets added yet.
+  <p>No gadgets added yet.</p>
+  <p>Add one by click the "Add new gadget button" or by <%= link_to "clicking here", new_gadget_path %>.</p>
 <% end %>
-
-<br />
-
-<%= link_to "New gadget", new_gadget_path %>
