--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,15 +18,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Gadget Manager</a>
+          <%= link_to "Gadget Manager", root_path, class: "navbar-brand" %>
         </div>
 
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li>
-              <%= link_to "All Gadgets", gadgets_path %>
-            </li>
+            <li><%= link_to "Home", root_path %></li>
+            <% if signed_in? %>
+              <li>
+                <%= link_to "Manage Gadgets", gadgets_path %>
+              </li>
+            <% end %>
           </ul>
 
           <!-- The drop down menu -->
@@ -36,7 +38,7 @@
                 <%= link_to "Sign up", new_user_registration_path %>
               </li>
               <li>
-                <%= link_to "sign in", new_user_session_path %>
+                <%= link_to "Sign in", new_user_session_path %>
               </li>
             <% else %>
               <li>
