--- a/app/views/gadgets/_form.html.erb
+++ b/app/views/gadgets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@gadget, class: "form") do |f| %>
+<%= form_for(@gadget, html: { multipart: true, class: "form" }) do |f| %>
   <% if @gadget.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@gadget.errors.count, "error") %> prohibited this gadget from being saved:</h2>
@@ -22,6 +22,23 @@
 
   <div><%= f.label :date_purchased %><br />
   <%= f.date_select(:date_purchased, :order => [:month, :day, :year]) %></div>
+
+  <hr />
+  <h3>Gadget photos</h3>
+
+  <% unless @gadget.new_record? %>
+    <%= render "photos", f: f %>
+  <% else %>
+    <p>
+      <%= f.fields_for :photos do |fp| %>
+        <%= render "photo_fields", f: fp %>
+      <% end %>
+    </p>
+  <% end %>
+
+  <div>
+    <%= link_to_add_fields "+ Add photo", f, :photos %></p>
+  </div>
 
   <%= f.hidden_field :user_id, value: current_user.id.to_s %>
 
