--- a/app/views/gadgets/index.html.erb
+++ b/app/views/gadgets/index.html.erb
@@ -3,20 +3,28 @@
 
 <p id="notice"><%= notice %></p>
 
+<%= render 'search_form' %>
+
 <% if @all_gadgets.present? %>
   <table class="table table-striped table-bordered">
     <tr>
-      <th>Name</th>
-      <th>Manufacturer</th>
+      <th>
+        <%= sort_link(@search, :name, "Name") %>
+      </th>
+      <th>
+        <%= sort_link(@search, :manufacturer, "Manufacturer") %>
+      </th>
       <th>Quantity</th>
-      <th>Date purchased</th>
+      <th>
+        <%= sort_link(@search, :date_purchased, "Date purchased") %>
+      </th>
       <th>Actions</th>
     </tr>
 
     <% @all_gadgets.each do |gadget| %>
       <tr>
         <td><%= link_to gadget.name, gadget %></td>
-        <td><%= gadget.manufacturer.present? ? gadget.manufacturer : "(not provided)" %></td>
+        <td class="gadget_manufacturer"><%= gadget.manufacturer.present? ? gadget.manufacturer : "(not provided)" %></td>
         <td><%= gadget.quantity %></td>
         <td><%= gadget.date_purchased.to_time.strftime('%B %e, %Y') %></td>
         <td>
